fix apply now button text cut off on wide window

--- a/src/RoleCard/RoleCard.css
+++ b/src/RoleCard/RoleCard.css
@@ -49,3 +49,9 @@
     height: 50px;
   }
 }
+
+@media (min-width: 1600px) {
+  .buttonWithImage {
+    height: 3.5vw;
+  }
+}
